y.output
Terminals unused in grammar

    VOID
    THEN
    DO
    LEFT_SQUARE_BRACKET
    RIGHT_SQUARE_BRACKET
    SCAN


Rules useless in parser due to conflicts

  112 $@3: %empty


State 7 conflicts: 1 reduce/reduce
State 9 conflicts: 1 shift/reduce
State 10 conflicts: 1 shift/reduce
State 23 conflicts: 18 shift/reduce
State 69 conflicts: 20 reduce/reduce
State 120 conflicts: 12 reduce/reduce
State 227 conflicts: 1 shift/reduce
State 277 conflicts: 9 reduce/reduce
State 339 conflicts: 1 shift/reduce
State 342 conflicts: 1 shift/reduce
State 346 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: statement
    2        | program statement

    3 statement: blockStatements
    4          | functionStatement
    5          | main

    6 blockStatements: blockStatement
    7                | blockStatements blockStatement

    8 blockStatement: variableDeclarationStatement
    9               | constDeclarationStatement
   10               | assignmentStatement
   11               | incStatement
   12               | decStatement
   13               | ifStatement
   14               | switchStatement
   15               | whileStatement
   16               | forStatement
   17               | repeatStatement
   18               | enumStatement
   19               | returnStatement
   20               | printStatement
   21               | continueBreakStatement
   22               | functionCallStatement
   23               | comment

   24 values: DIGIT
   25       | FLOAT_LITERAL
   26       | STRING_LITERAL
   27       | CHAR_LITERAL
   28       | BOOL_LITERAL

   29 expression: intMathExpression
   30           | floatMathExpression
   31           | stringExpression
   32           | logicalExpression

   33 variableDeclarationStatement: assignVariableDeclaration
   34                             | nonAssignVariableDeclaration

   35 noSemiColumnVariableDeclarationStatement: noSemiColumnAssignVariableDeclaration
   36                                         | noSemiColumnNonAssignVariableDeclaration

   37 assignVariableDeclaration: noSemiColumnAssignVariableDeclaration ';'

   38 noSemiColumnAssignVariableDeclaration: CHAR IDENTIFIER ASSIGN CHAR_LITERAL
   39                                      | INT IDENTIFIER ASSIGN intMathExpression
   40                                      | FLOAT IDENTIFIER ASSIGN floatMathExpression
   41                                      | STRING IDENTIFIER ASSIGN stringExpression
   42                                      | BOOL IDENTIFIER ASSIGN logicalExpression

   43 nonAssignVariableDeclaration: noSemiColumnNonAssignVariableDeclaration ';'

   44 noSemiColumnNonAssignVariableDeclaration: INT IDENTIFIER
   45                                         | CHAR IDENTIFIER
   46                                         | FLOAT IDENTIFIER
   47                                         | STRING IDENTIFIER
   48                                         | BOOL IDENTIFIER

   49 constDeclarationStatement: noSemiColumnConstDeclaration ';'

   50 noSemiColumnConstDeclaration: CONST CHAR IDENTIFIER ASSIGN CHAR_LITERAL
   51                             | CONST INT IDENTIFIER ASSIGN intMathExpression
   52                             | CONST FLOAT IDENTIFIER ASSIGN floatMathExpression
   53                             | CONST STRING IDENTIFIER ASSIGN stringExpression
   54                             | CONST BOOL IDENTIFIER ASSIGN logicalExpression

   55 assignmentStatement: IDENTIFIER ASSIGN intMathExpression ';'
   56                    | IDENTIFIER ASSIGN floatMathExpression ';'
   57                    | IDENTIFIER ASSIGN stringExpression ';'
   58                    | IDENTIFIER ASSIGN logicalExpression ';'
   59                    | IDENTIFIER ASSIGN CHAR_LITERAL ';'

   60 incStatement: IDENTIFIER INCREMENT ';'

   61 decStatement: IDENTIFIER DECREMENT ';'

   62 intMathExpression: intMathExpression PLUS intMathTerm
   63                  | intMathExpression MINUS intMathTerm
   64                  | intMathTerm

   65 intMathTerm: intMathTerm MULTIPLY intMathFactor
   66            | intMathTerm DIVIDE intMathFactor
   67            | intMathTerm MODULO intMathFactor
   68            | intMathFactor

   69 intMathFactor: intMathPrimary
   70              | IDENTIFIER INCREMENT
   71              | IDENTIFIER DECREMENT

   72 intMathPrimary: IDENTIFIER
   73               | DIGIT
   74               | LEFT_PARENTHESIS intMathExpression RIGHT_PARENTHESIS

   75 floatMathExpression: floatMathExpression PLUS floatMathTerm
   76                    | floatMathExpression MINUS floatMathTerm
   77                    | floatMathTerm

   78 floatMathTerm: floatMathTerm MULTIPLY floatMathFactor
   79              | floatMathTerm DIVIDE floatMathFactor
   80              | floatMathFactor

   81 floatMathFactor: IDENTIFIER
   82                | FLOAT_LITERAL
   83                | LEFT_PARENTHESIS floatMathExpression RIGHT_PARENTHESIS

   84 stringExpression: STRING_LITERAL
   85                 | IDENTIFIER
   86                 | stringExpression PLUS stringExpression
   87                 | LEFT_PARENTHESIS stringExpression RIGHT_PARENTHESIS

   88 logicalExpression: logicalTerm
   89                  | logicalExpression OR logicalTerm

   90 logicalTerm: logicalFactor
   91            | logicalTerm AND logicalFactor

   92 logicalFactor: logicalPrimary
   93              | NOT logicalFactor

   94 logicalPrimary: intMathExpression GREATER intMathExpression
   95               | intMathExpression LESS intMathExpression
   96               | intMathExpression GREATER_EQUAL intMathExpression
   97               | intMathExpression LESS_EQUAL intMathExpression
   98               | intMathExpression EQUAL intMathExpression
   99               | intMathExpression NOT_EQUAL intMathExpression
  100               | floatMathExpression GREATER floatMathExpression
  101               | floatMathExpression LESS floatMathExpression
  102               | floatMathExpression GREATER_EQUAL floatMathExpression
  103               | floatMathExpression LESS_EQUAL floatMathExpression
  104               | floatMathExpression EQUAL floatMathExpression
  105               | floatMathExpression NOT_EQUAL floatMathExpression
  106               | LEFT_PARENTHESIS logicalExpression RIGHT_PARENTHESIS
  107               | BOOL_LITERAL
  108               | IDENTIFIER

  109 $@1: %empty

  110 $@2: %empty

  111 ifStatement: IF $@1 LEFT_PARENTHESIS logicalExpression RIGHT_PARENTHESIS LEFT_CURLY_BRACE $@2 blockStatements RIGHT_CURLY_BRACE

  112 $@3: %empty

  113 $@4: %empty

  114 $@5: %empty

  115 $@6: %empty

  116 $@7: %empty

  117 ifStatement: IF $@3 LEFT_PARENTHESIS logicalExpression RIGHT_PARENTHESIS LEFT_CURLY_BRACE $@4 blockStatements RIGHT_CURLY_BRACE $@5 ELSE $@6 LEFT_CURLY_BRACE $@7 blockStatements RIGHT_CURLY_BRACE

  118 $@8: %empty

  119 whileStatement: WHILE LEFT_PARENTHESIS logicalExpression RIGHT_PARENTHESIS LEFT_CURLY_BRACE $@8 blockStatements RIGHT_CURLY_BRACE

  120 $@9: %empty

  121 repeatStatement: REPEAT LEFT_CURLY_BRACE $@9 blockStatements RIGHT_CURLY_BRACE UNTIL LEFT_PARENTHESIS logicalExpression RIGHT_PARENTHESIS

  122 forAssignment: IDENTIFIER ASSIGN intMathExpression
  123              | IDENTIFIER ASSIGN floatMathExpression
  124              | IDENTIFIER ASSIGN stringExpression
  125              | IDENTIFIER ASSIGN BOOL_LITERAL
  126              | IDENTIFIER INCREMENT
  127              | IDENTIFIER DECREMENT

  128 forDeclaration: IDENTIFIER ASSIGN intMathExpression ';'
  129               | IDENTIFIER ASSIGN floatMathExpression ';'
  130               | IDENTIFIER ASSIGN stringExpression ';'
  131               | IDENTIFIER ASSIGN BOOL_LITERAL ';'
  132               | assignVariableDeclaration

  133 $@10: %empty

  134 forStatement: FOR LEFT_PARENTHESIS $@10 forDeclaration logicalExpression ';' forAssignment RIGHT_PARENTHESIS LEFT_CURLY_BRACE blockStatements RIGHT_CURLY_BRACE

  135 $@11: %empty

  136 switchStatement: SWITCH LEFT_PARENTHESIS IDENTIFIER RIGHT_PARENTHESIS LEFT_CURLY_BRACE $@11 caseStatement RIGHT_CURLY_BRACE

  137 caseStatement: CASE values ':' blockStatements BREAK ';' caseStatement
  138              | CASE values ':' blockStatements BREAK ';'
  139              | DEFAULT ':' blockStatements BREAK ';'
  140              | %empty

  141 enumIdentifiers: IDENTIFIER ',' enumIdentifiers
  142                | IDENTIFIER

  143 $@12: %empty

  144 enumStatement: ENUM IDENTIFIER LEFT_CURLY_BRACE $@12 enumIdentifiers RIGHT_CURLY_BRACE

  145 $@13: %empty

  146 functionStatement: FUNCTION IDENTIFIER LEFT_PARENTHESIS $@13 parameter RIGHT_PARENTHESIS LEFT_CURLY_BRACE blockStatements RIGHT_CURLY_BRACE

  147 parameter: noSemiColumnVariableDeclarationStatement ',' parameter
  148          | noSemiColumnVariableDeclarationStatement
  149          | noSemiColumnConstDeclaration ',' parameter
  150          | noSemiColumnConstDeclaration
  151          | %empty

  152 returnStatement: RETURN argument ';'
  153                | RETURN ';'

  154 continueBreakStatement: BREAK ';'
  155                       | BREAK IDENTIFIER ';'
  156                       | BREAK
  157                       | CONTINUE ';'
  158                       | CONTINUE IDENTIFIER ';'
  159                       | CONTINUE

  160 printStatement: PRINT LEFT_PARENTHESIS argument RIGHT_PARENTHESIS ';'
  161               | PRINT LEFT_PARENTHESIS RIGHT_PARENTHESIS ';'

  162 functionCallStatement: IDENTIFIER LEFT_PARENTHESIS argument RIGHT_PARENTHESIS ';'
  163                      | IDENTIFIER LEFT_PARENTHESIS RIGHT_PARENTHESIS ';'

  164 argument: expression ',' argument
  165         | expression

  166 comment: COMMENT

  167 $@14: %empty

  168 $@15: %empty

  169 main: MAIN $@14 LEFT_PARENTHESIS RIGHT_PARENTHESIS LEFT_CURLY_BRACE $@15 blockStatements RIGHT_CURLY_BRACE


Terminals, with rules where they appear

    $end (0) 0
    ',' (44) 141 147 149 164
    ':' (58) 137 138 139
    ';' (59) 37 43 49 55 56 57 58 59 60 61 128 129 130 131 134 137 138 139 152 153 154 155 157 158 160 161 162 163
    error (256)
    INT (258) 39 44 51
    CHAR (259) 38 45 50
    FLOAT (260) 40 46 52
    STRING (261) 41 47 53
    CONST (262) 50 51 52 53 54
    BOOL (263) 42 48 54
    VOID (264)
    PLUS (265) 62 75 86
    MINUS (266) 63 76
    MULTIPLY (267) 65 78
    DIVIDE (268) 66 79
    MODULO (269) 67
    INCREMENT (270) 60 70 126
    DECREMENT (271) 61 71 127
    GREATER (272) 94 100
    LESS (273) 95 101
    GREATER_EQUAL (274) 96 102
    LESS_EQUAL (275) 97 103
    EQUAL (276) 98 104
    NOT_EQUAL (277) 99 105
    AND (278) 91
    OR (279) 89
    NOT (280) 93
    ASSIGN (281) 38 39 40 41 42 50 51 52 53 54 55 56 57 58 59 122 123 124 125 128 129 130 131
    IF (282) 111 117
    ELSE (283) 117
    SWITCH (284) 136
    CASE (285) 137 138
    DEFAULT (286) 139
    CONTINUE (287) 157 158 159
    BREAK (288) 137 138 139 154 155 156
    THEN (289)
    WHILE (290) 119
    DO (291)
    FOR (292) 134
    RETURN (293) 152 153
    REPEAT (294) 121
    UNTIL (295) 121
    LEFT_CURLY_BRACE (296) 111 117 119 121 134 136 144 146 169
    RIGHT_CURLY_BRACE (297) 111 117 119 121 134 136 144 146 169
    LEFT_PARENTHESIS (298) 74 83 87 106 111 117 119 121 134 136 146 160 161 162 163 169
    RIGHT_PARENTHESIS (299) 74 83 87 106 111 117 119 121 134 136 146 160 161 162 163 169
    LEFT_SQUARE_BRACKET (300)
    RIGHT_SQUARE_BRACKET (301)
    ENUM (302) 144
    FUNCTION (303) 146
    MAIN (304) 169
    PRINT (305) 160 161
    SCAN (306)
    COMMENT (307) 166
    IDENTIFIER <sVal> (308) 38 39 40 41 42 44 45 46 47 48 50 51 52 53 54 55 56 57 58 59 60 61 70 71 72 81 85 108 122 123 124 125 126 127 128 129 130 131 136 141 142 144 146 155 158 162 163
    DIGIT <iVal> (309) 24 73
    FLOAT_LITERAL <fVal> (310) 25 82
    STRING_LITERAL <sVal> (311) 26 84
    CHAR_LITERAL <cVal> (312) 27 38 50 59
    BOOL_LITERAL <bVal> (313) 28 107 125 131


Nonterminals, with rules where they appear

    $accept (62)
        on left: 0
    program (63)
        on left: 1 2
        on right: 0 2
    statement (64)
        on left: 3 4 5
        on right: 1 2
    blockStatements (65)
        on left: 6 7
        on right: 3 7 111 117 119 121 134 137 138 139 146 169
    blockStatement (66)
        on left: 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
        on right: 6 7
    values (67)
        on left: 24 25 26 27 28
        on right: 137 138
    expression (68)
        on left: 29 30 31 32
        on right: 164 165
    variableDeclarationStatement (69)
        on left: 33 34
        on right: 8
    noSemiColumnVariableDeclarationStatement (70)
        on left: 35 36
        on right: 147 148
    assignVariableDeclaration (71)
        on left: 37
        on right: 33 132
    noSemiColumnAssignVariableDeclaration (72)
        on left: 38 39 40 41 42
        on right: 35 37
    nonAssignVariableDeclaration (73)
        on left: 43
        on right: 34
    noSemiColumnNonAssignVariableDeclaration (74)
        on left: 44 45 46 47 48
        on right: 36 43
    constDeclarationStatement (75)
        on left: 49
        on right: 9
    noSemiColumnConstDeclaration (76)
        on left: 50 51 52 53 54
        on right: 49 149 150
    assignmentStatement (77)
        on left: 55 56 57 58 59
        on right: 10
    incStatement (78)
        on left: 60
        on right: 11
    decStatement (79)
        on left: 61
        on right: 12
    intMathExpression <iVal> (80)
        on left: 62 63 64
        on right: 29 39 51 55 62 63 74 94 95 96 97 98 99 122 128
    intMathTerm <iVal> (81)
        on left: 65 66 67 68
        on right: 62 63 64 65 66 67
    intMathFactor <iVal> (82)
        on left: 69 70 71
        on right: 65 66 67 68
    intMathPrimary <iVal> (83)
        on left: 72 73 74
        on right: 69
    floatMathExpression <fVal> (84)
        on left: 75 76 77
        on right: 30 40 52 56 75 76 83 100 101 102 103 104 105 123 129
    floatMathTerm <fVal> (85)
        on left: 78 79 80
        on right: 75 76 77 78 79
    floatMathFactor <fVal> (86)
        on left: 81 82 83
        on right: 78 79 80
    stringExpression <sVal> (87)
        on left: 84 85 86 87
        on right: 31 41 53 57 86 87 124 130
    logicalExpression <bVal> (88)
        on left: 88 89
        on right: 32 42 54 58 89 106 111 117 119 121 134
    logicalTerm <bVal> (89)
        on left: 90 91
        on right: 88 89 91
    logicalFactor <bVal> (90)
        on left: 92 93
        on right: 90 91 93
    logicalPrimary <bVal> (91)
        on left: 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108
        on right: 92
    ifStatement (92)
        on left: 111 117
        on right: 13
    $@1 (93)
        on left: 109
        on right: 111
    $@2 (94)
        on left: 110
        on right: 111
    $@3 (95)
        on left: 112
        on right: 117
    $@4 (96)
        on left: 113
        on right: 117
    $@5 (97)
        on left: 114
        on right: 117
    $@6 (98)
        on left: 115
        on right: 117
    $@7 (99)
        on left: 116
        on right: 117
    whileStatement (100)
        on left: 119
        on right: 15
    $@8 (101)
        on left: 118
        on right: 119
    repeatStatement (102)
        on left: 121
        on right: 17
    $@9 (103)
        on left: 120
        on right: 121
    forAssignment (104)
        on left: 122 123 124 125 126 127
        on right: 134
    forDeclaration (105)
        on left: 128 129 130 131 132
        on right: 134
    forStatement (106)
        on left: 134
        on right: 16
    $@10 (107)
        on left: 133
        on right: 134
    switchStatement (108)
        on left: 136
        on right: 14
    $@11 (109)
        on left: 135
        on right: 136
    caseStatement (110)
        on left: 137 138 139 140
        on right: 136 137
    enumIdentifiers (111)
        on left: 141 142
        on right: 141 144
    enumStatement (112)
        on left: 144
        on right: 18
    $@12 (113)
        on left: 143
        on right: 144
    functionStatement (114)
        on left: 146
        on right: 4
    $@13 (115)
        on left: 145
        on right: 146
    parameter (116)
        on left: 147 148 149 150 151
        on right: 146 147 149
    returnStatement (117)
        on left: 152 153
        on right: 19
    continueBreakStatement (118)
        on left: 154 155 156 157 158 159
        on right: 21
    printStatement (119)
        on left: 160 161
        on right: 20
    functionCallStatement (120)
        on left: 162 163
        on right: 22
    argument (121)
        on left: 164 165
        on right: 152 160 162 164
    comment (122)
        on left: 166
        on right: 23
    main (123)
        on left: 169
        on right: 5
    $@14 (124)
        on left: 167
        on right: 169
    $@15 (125)
        on left: 168
        on right: 169


State 0

    0 $accept: . program $end

    INT         shift, and go to state 1
    CHAR        shift, and go to state 2
    FLOAT       shift, and go to state 3
    STRING      shift, and go to state 4
    CONST       shift, and go to state 5
    BOOL        shift, and go to state 6
    IF          shift, and go to state 7
    SWITCH      shift, and go to state 8
    CONTINUE    shift, and go to state 9
    BREAK       shift, and go to state 10
    WHILE       shift, and go to state 11
    FOR         shift, and go to state 12
    RETURN      shift, and go to state 13
    REPEAT      shift, and go to state 14
    ENUM        shift, and go to state 15
    FUNCTION    shift, and go to state 16
    MAIN        shift, and go to state 17
    PRINT       shift, and go to state 18
    COMMENT     shift, and go to state 19
    IDENTIFIER  shift, and go to state 20

    program                                   go to state 21
    statement                                 go to state 22
    blockStatements                           go to state 23
    blockStatement                            go to state 24
    variableDeclarationStatement              go to state 25
    assignVariableDeclaration                 go to state 26
    noSemiColumnAssignVariableDeclaration     go to state 27
    nonAssignVariableDeclaration              go to state 28
    noSemiColumnNonAssignVariableDeclaration  go to state 29
    constDeclarationStatement                 go to state 30
    noSemiColumnConstDeclaration              go to state 31
    assignmentStatement                       go to state 32
    incStatement                              go to state 33
    decStatement                              go to state 34
    ifStatement                               go to state 35
    whileStatement                            go to state 36
    repeatStatement                           go to state 37
    forStatement                              go to state 38
    switchStatement                           go to state 39
    enumStatement                             go to state 40
    functionStatement                         go to state 41
    returnStatement                           go to state 42
    continueBreakStatement                    go to state 43
    printStatement                            go to state 44
    functionCallStatement                     go to state 45
    comment                                   go to state 46
    main                                      go to state 47


State 1

   39 noSemiColumnAssignVariableDeclaration: INT . IDENTIFIER ASSIGN intMathExpression
   44 noSemiColumnNonAssignVariableDeclaration: INT . IDENTIFIER

    IDENTIFIER  shift, and go to state 48


State 2

   38 noSemiColumnAssignVariableDeclaration: CHAR . IDENTIFIER ASSIGN CHAR_LITERAL
   45 noSemiColumnNonAssignVariableDeclaration: CHAR . IDENTIFIER

    IDENTIFIER  shift, and go to state 49


State 3

   40 noSemiColumnAssignVariableDeclaration: FLOAT . IDENTIFIER ASSIGN floatMathExpression
   46 noSemiColumnNonAssignVariableDeclaration: FLOAT . IDENTIFIER

    IDENTIFIER  shift, and go to state 50


State 4

   41 noSemiColumnAssignVariableDeclaration: STRING . IDENTIFIER ASSIGN stringExpression
   47 noSemiColumnNonAssignVariableDeclaration: STRING . IDENTIFIER

    IDENTIFIER  shift, and go to state 51


State 5

   50 noSemiColumnConstDeclaration: CONST . CHAR IDENTIFIER ASSIGN CHAR_LITERAL
   51                             | CONST . INT IDENTIFIER ASSIGN intMathExpression
   52                             | CONST . FLOAT IDENTIFIER ASSIGN floatMathExpression
   53                             | CONST . STRING IDENTIFIER ASSIGN stringExpression
   54                             | CONST . BOOL IDENTIFIER ASSIGN logicalExpression

    INT     shift, and go to state 52
    CHAR    shift, and go to state 53
    FLOAT   shift, and go to state 54
    STRING  shift, and go to state 55
    BOOL    shift, and go to state 56


State 6

   42 noSemiColumnAssignVariableDeclaration: BOOL . IDENTIFIER ASSIGN logicalExpression
   48 noSemiColumnNonAssignVariableDeclaration: BOOL . IDENTIFIER

    IDENTIFIER  shift, and go to state 57


State 7

  111 ifStatement: IF . $@1 LEFT_PARENTHESIS logicalExpression RIGHT_PARENTHESIS LEFT_CURLY_BRACE $@2 blockStatements RIGHT_CURLY_BRACE
  117            | IF . $@3 LEFT_PARENTHESIS logicalExpression RIGHT_PARENTHESIS LEFT_CURLY_BRACE $@4 blockStatements RIGHT_CURLY_BRACE $@5 ELSE $@6 LEFT_CURLY_BRACE $@7 blockStatements RIGHT_CURLY_BRACE

    LEFT_PARENTHESIS  reduce using rule 109 ($@1)
    LEFT_PARENTHESIS  [reduce using rule 112 ($@3)]
    $default          reduce using rule 109 ($@1)

    $@1  go to state 58
    $@3  go to state 59


State 8

  136 switchStatement: SWITCH . LEFT_PARENTHESIS IDENTIFIER RIGHT_PARENTHESIS LEFT_CURLY_BRACE $@11 caseStatement RIGHT_CURLY_BRACE

    LEFT_PARENTHESIS  shift, and go to state 60


State 9

  157 continueBreakStatement: CONTINUE . ';'
  158                       | CONTINUE . IDENTIFIER ';'
  159                       | CONTINUE .

    IDENTIFIER  shift, and go to state 61
    ';'         shift, and go to state 62

    IDENTIFIER  [reduce using rule 159 (continueBreakStatement)]
    $default    reduce using rule 159 (continueBreakStatement)


State 10

  154 continueBreakStatement: BREAK . ';'
  155                       | BREAK . IDENTIFIER ';'
  156                       | BREAK .

    IDENTIFIER  shift, and go to state 63
    ';'         shift, and go to state 64

    IDENTIFIER  [reduce using rule 156 (continueBreakStatement)]
    $default    reduce using rule 156 (continueBreakStatement)


State 11

  119 whileStatement: WHILE . LEFT_PARENTHESIS logicalExpression RIGHT_PARENTHESIS LEFT_CURLY_BRACE $@8 blockStatements RIGHT_CURLY_BRACE

    LEFT_PARENTHESIS  shift, and go to state 65


State 12

  134 forStatement: FOR . LEFT_PARENTHESIS $@10 forDeclaration logicalExpression ';' forAssignment RIGHT_PARENTHESIS LEFT_CURLY_BRACE blockStatements RIGHT_CURLY_BRACE

    LEFT_PARENTHESIS  shift, and go to state 66


State 13

  152 returnStatement: RETURN . argument ';'
  153                | RETURN . ';'

    NOT               shift, and go to state 67
    LEFT_PARENTHESIS  shift, and go to state 68
    IDENTIFIER        shift, and go to state 69
    DIGIT             shift, and go to state 70
    FLOAT_LITERAL     shift, and go to state 71
    STRING_LITERAL    shift, and go to state 72
    BOOL_LITERAL      shift, and go to state 73
    ';'               shift, and go to state 74

    expression           go to state 75
    intMathExpression    go to state 76
    intMathTerm          go to state 77
    intMathFactor        go to state 78
    intMathPrimary       go to state 79
    floatMathExpression  go to state 80
    floatMathTerm        go to state 81
    floatMathFactor      go to state 82
    stringExpression     go to state 83
    logicalExpression    go to state 84
    logicalTerm          go to state 85
    logicalFactor        go to state 86
    logicalPrimary       go to state 87
    argument             go to state 88


State 14

  121 repeatStatement: REPEAT . LEFT_CURLY_BRACE $@9 blockStatements RIGHT_CURLY_BRACE UNTIL LEFT_PARENTHESIS logicalExpression RIGHT_PARENTHESIS

    LEFT_CURLY_BRACE  shift, and go to state 89


State 15

  144 enumStatement: ENUM . IDENTIFIER LEFT_CURLY_BRACE $@12 enumIdentifiers RIGHT_CURLY_BRACE

    IDENTIFIER  shift, and go to state 90


State 16

  146 functionStatement: FUNCTION . IDENTIFIER LEFT_PARENTHESIS $@13 parameter RIGHT_PARENTHESIS LEFT_CURLY_BRACE blockStatements RIGHT_CURLY_BRACE

    IDENTIFIER  shift, and go to state 91


State 17

  169 main: MAIN . $@14 LEFT_PARENTHESIS RIGHT_PARENTHESIS LEFT_CURLY_BRACE $@15 blockStatements RIGHT_CURLY_BRACE

    $default  reduce using rule 167 ($@14)

    $@14  go to state 92


State 18

  160 printStatement: PRINT . LEFT_PARENTHESIS argument RIGHT_PARENTHESIS ';'
  161               | PRINT . LEFT_PARENTHESIS RIGHT_PARENTHESIS ';'

    LEFT_PARENTHESIS  shift, and go to state 93


State 19

  166 comment: COMMENT .

    $default  reduce using rule 166 (comment)


State 20

   55 assignmentStatement: IDENTIFIER . ASSIGN intMathExpression ';'
   56                    | IDENTIFIER . ASSIGN floatMathExpression ';'
   57                    | IDENTIFIER . ASSIGN stringExpression ';'
   58                    | IDENTIFIER . ASSIGN logicalExpression ';'
   59                    | IDENTIFIER . ASSIGN CHAR_LITERAL ';'
   60 incStatement: IDENTIFIER . INCREMENT ';'
   61 decStatement: IDENTIFIER . DECREMENT ';'
  162 functionCallStatement: IDENTIFIER . LEFT_PARENTHESIS argument RIGHT_PARENTHESIS ';'
  163                      | IDENTIFIER . LEFT_PARENTHESIS RIGHT_PARENTHESIS ';'

    INCREMENT         shift, and go to state 94
    DECREMENT         shift, and go to state 95
    ASSIGN            shift, and go to state 96
    LEFT_PARENTHESIS  shift, and go to state 97


State 21

    0 $accept: program . $end
    2 program: program . statement

    $end        shift, and go to state 98
    INT         shift, and go to state 1
    CHAR        shift, and go to state 2
    FLOAT       shift, and go to state 3
    STRING      shift, and go to state 4
    CONST       shift, and go to state 5
    BOOL        shift, and go to state 6
    IF          shift, and go to state 7
    SWITCH      shift, and go to state 8
    CONTINUE    shift, and go to state 9
    BREAK       shift, and go to state 10
    WHILE       shift, and go to state 11
    FOR         shift, and go to state 12
    RETURN      shift, and go to state 13
    REPEAT      shift, and go to state 14
    ENUM        shift, and go to state 15
    FUNCTION    shift, and go to state 16
    MAIN        shift, and go to state 17
    PRINT       shift, and go to state 18
    COMMENT     shift, and go to state 19
    IDENTIFIER  shift, and go to state 20

    statement                                 go to state 99
    blockStatements                           go to state 23
    blockStatement                            go to state 24
    variableDeclarationStatement              go to state 25
    assignVariableDeclaration                 go to state 26
    noSemiColumnAssignVariableDeclaration     go to state 27
    nonAssignVariableDeclaration              go to state 28
    noSemiColumnNonAssignVariableDeclaration  go to state 29
    constDeclarationStatement                 go to state 30
    noSemiColumnConstDeclaration              go to state 31
    assignmentStatement                       go to state 32
    incStatement                              go to state 33
    decStatement                              go to state 34
    ifStatement                               go to state 35
    whileStatement                            go to state 36
    repeatStatement                           go to state 37
    forStatement                              go to state 38
    switchStatement                           go to state 39
    enumStatement                             go to state 40
    functionStatement                         go to state 41
    returnStatement                           go to state 42
    continueBreakStatement                    go to state 43
    printStatement                            go to state 44
    functionCallStatement                     go to state 45
    comment                                   go to state 46
    main                                      go to state 47


State 22

    1 program: statement .

    $default  reduce using rule 1 (program)


State 23

    3 statement: blockStatements .
    7 blockStatements: blockStatements . blockStatement

    INT         shift, and go to state 1
    CHAR        shift, and go to state 2
    FLOAT       shift, and go to state 3
    STRING      shift, and go to state 4
    CONST       shift, and go to state 5
    BOOL        shift, and go to state 6
    IF          shift, and go to state 7
    SWITCH      shift, and go to state 8
    CONTINUE    shift, and go to state 9
    BREAK       shift, and go to state 10
    WHILE       shift, and go to state 11
    FOR         shift, and go to state 12
    RETURN      shift, and go to state 13
    REPEAT      shift, and go to state 14
    ENUM        shift, and go to state 15
    PRINT       shift, and go to state 18
    COMMENT     shift, and go to state 19
    IDENTIFIER  shift, and go to state 20

    INT         [reduce using rule 3 (statement)]
    CHAR        [reduce using rule 3 (statement)]
    FLOAT       [reduce using rule 3 (statement)]
    STRING      [reduce using rule 3 (statement)]
    CONST       [reduce using rule 3 (statement)]
    BOOL        [reduce using rule 3 (statement)]
    IF          [reduce using rule 3 (statement)]
    SWITCH      [reduce using rule 3 (statement)]
    CONTINUE    [reduce using rule 3 (statement)]
    BREAK       [reduce using rule 3 (statement)]
    WHILE       [reduce using rule 3 (statement)]
    FOR         [reduce using rule 3 (statement)]
    RETURN      [reduce using rule 3 (statement)]
    REPEAT      [reduce using rule 3 (statement)]
    ENUM        [reduce using rule 3 (statement)]
    PRINT       [reduce using rule 3 (statement)]
    COMMENT     [reduce using rule 3 (statement)]
    IDENTIFIER  [reduce using rule 3 (statement)]
    $default    reduce using rule 3 (statement)

    blockStatement                            go to state 100
    variableDeclarationStatement              go to state 25
    assignVariableDeclaration                 go to state 26
    noSemiColumnAssignVariableDeclaration     go to state 27
    nonAssignVariableDeclaration              go to state 28
    noSemiColumnNonAssignVariableDeclaration  go to state 29
    constDeclarationStatement                 go to state 30
    noSemiColumnConstDeclaration              go to state 31
    assignmentStatement                       go to state 32
    incStatement                              go to state 33
    decStatement                              go to state 34
    ifStatement                               go to state 35
    whileStatement                            go to state 36
    repeatStatement                           go to state 37
    forStatement                              go to state 38
    switchStatement                           go to state 39
    enumStatement                             go to state 40
    returnStatement                           go to state 42
    continueBreakStatement                    go to state 43
    printStatement                            go to state 44
    functionCallStatement                     go to state 45
    comment                                   go to state 46


State 24

    6 blockStatements: blockStatement .

    $default  reduce using rule 6 (blockStatements)


State 25

    8 blockStatement: variableDeclarationStatement .

    $default  reduce using rule 8 (blockStatement)


State 26

   33 variableDeclarationStatement: assignVariableDeclaration .

    $default  reduce using rule 33 (variableDeclarationStatement)


State 27

   37 assignVariableDeclaration: noSemiColumnAssignVariableDeclaration . ';'

    ';'  shift, and go to state 101


State 28

   34 variableDeclarationStatement: nonAssignVariableDeclaration .

    $default  reduce using rule 34 (variableDeclarationStatement)


State 29

   43 nonAssignVariableDeclaration: noSemiColumnNonAssignVariableDeclaration . ';'

    ';'  shift, and go to state 102


State 30

    9 blockStatement: constDeclarationStatement .

    $default  reduce using rule 9 (blockStatement)


State 31

   49 constDeclarationStatement: noSemiColumnConstDeclaration . ';'

    ';'  shift, and go to state 103


State 32

   10 blockStatement: assignmentStatement .

    $default  reduce using rule 10 (blockStatement)


State 33

   11 blockStatement: incStatement .

    $default  reduce using rule 11 (blockStatement)


State 34

   12 blockStatement: decStatement .

    $default  reduce using rule 12 (blockStatement)


State 35

   13 blockStatement: ifStatement .

    $default  reduce using rule 13 (blockStatement)


State 36

   15 blockStatement: whileStatement .

    $default  reduce using rule 15 (blockStatement)


State 37

   17 blockStatement: repeatStatement .

    $default  reduce using rule 17 (blockStatement)


State 38

   16 blockStatement: forStatement .

    $default  reduce using rule 16 (blockStatement)


State 39

   14 blockStatement: switchStatement .

    $default  reduce using rule 14 (blockStatement)


State 40

   18 blockStatement: enumStatement .

    $default  reduce using rule 18 (blockStatement)


State 41

    4 statement: functionStatement .

    $default  reduce using rule 4 (statement)


State 42

   19 blockStatement: returnStatement .

    $default  reduce using rule 19 (blockStatement)


State 43

   21 blockStatement: continueBreakStatement .
